--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
                 <h2>Insira uma nova tarefa</h2>
                 <label for="nomeTarefa">Nome:</label>
                 <input type="text" name="nomeTarefa" id="nome" placeholder="Insira o nome da tarefa" required>
-                <button>Adicionar</button>
+                <button id="addNewTask">Adicionar</button>
             </form>
         </section>
         <section id="listarTask">
             <h2>Tarefas pendentes</h2>
             <div id="listar">
-                <!-- As tarefas serão listadas aqui, exemplo: -->
+                <!-- As tarefas serão listadas aqui, exemplo: 
                  <div class="task">
                     <p>Nome da tarefa</p>
                     <input type="checkbox" name="tarefa1" id="tarefa1">
-                 </div>
+                 </div> -->
             </div>
         </section>
     </main>
     <footer>
         <p>Produzido por Rayssa durante a Week 1 do projeto Desencalha. &copy2025 </p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
